--- a/module/MiniModule/view/index/index.phtml
+++ b/module/MiniModule/view/index/index.phtml
@@ -6,6 +6,7 @@
     </head>
 
     <body>
-        <?php echo $this->content; ?>
+        home
+        <?php echo $this->nom; ?>
     </body>
 </html>
